# peyrang

./: .SRCINFO  PKGBUILD  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  oklab.rs  settings.rs
src/components/: ColorList.vue  OKLabColorPicker.vue  Pallet.vue
src/views/: MainView.vue  OKLabShiftView.vue  PermutateView.vue  ReplaceView.vue
