[package]
name = "peyrang"
version = "0.0.0"
description = "A simple application for replacing and permutating colors of an existing svg file."
authors = ["amiroof"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-create", "dialog-all", "protocol-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.12.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
